# gatewayz-frontend

./: .dockerignore  .env.error-monitoring.example  .env.example  .env.local  .env.template  .env.test  .gitguardian.yaml  .gitignore  .nixpacks-cache-bust  .npmrc  .pre-commit-config.yaml  .readthedocs.yaml  .sentryclirc  .sonarignore  .test_api_key  .user_test_user_3ecab43a.txt  .user_test_user_da091236.txt  .vercel-deploy  ACTUAL_ISSUES_AND_FIXES.md  AGENTS.md  AI_SDK_DELIVERY.md  ALL_PHASES_SUMMARY.md  ALTERNATIVE_AUTH_METHODS.md  ANALYTICS_ERROR_HANDLING.md  API_ROUTE_404_FIX.md  AUTH_ARCHITECTURE.md  AUTH_AUDIT_REPORT.md  AUTH_SESSION_FIXES_SUMMARY.md  AUTH_SUMMARY.txt  AUTH_TEST_COVERAGE.md  AUTOMATIC_MODEL_PAGES.md  AUTONOMOUS_FILES.txt  AUTO_MERGE_README.txt  BACKEND-FIXED-SUMMARY.md  BACKEND-HF-ISSUE.md  BACKEND-STATUS-REPORT.md  BACKEND_FIXES_NEEDED.md  BACKEND_UPDATE_ANALYSIS.md  BUILD_HEALTH_REPORT.md  CACHE_WARMING.md  (+417 more)
.claude/: settings.local.json
.claude-code/: README.md  config.json  custom-router.js
.github/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_EXAMPLES.md  CLAUDE_CODE_SETUP.md  INDEX.md  QUICK_REFERENCE.md
.sentry/: DASHBOARD_SETUP.md
.sonarlint/: connectedMode.json
.terragon/: README.md
api/: index.py
claude-code/: setup-linux.sh  setup-macos.sh  setup-windows.ps1
cypress/: README.md  tsconfig.json  webpack.config.ts
dashboards/: fastapi-observability.json  performance-monitoring.json
docs/: ACTIVITY_LOGGING.md  ACTIVITY_LOGGING_SUMMARY.md  AGENTS.md  AI_SDK_INTEGRATION.md  AI_SDK_MIGRATION_SUMMARY.md  ALIBABA_CLOUD_INTEGRATION.md  API_KEY_SETUP.md  ARCH_ROUTER_502_DIAGNOSIS.md  AUTOMATIC_HISTORY_INJECTION.md  AUTO_DEPLOYMENT_ARCHITECTURE.md  AUTO_DEPLOYMENT_GETTING_STARTED.md  AUTO_DEPLOYMENT_SETUP.md  AUTO_DEPLOYMENT_SUMMARY.md  AUTO_DEPLOY_QUICKSTART.md  AUTO_MERGE_IMPLEMENTATION.md  AUTO_MERGE_QUICK_START.md  AUTO_MERGE_TEST_VERIFICATION.md  BACKEND_TIER_INTEGRATION.md  BRAINTRUST_INTEGRATION.md  BRAINTRUST_SETUP.md  BRANCH_PROTECTION_SETUP.md  BULLETPROOF_TESTING_STRATEGY.md  CHAT_API_USAGE.md  CHAT_HISTORY_INTEGRATION.md  CHECK_COVERAGE_GUIDE 2.md  CHUTES_INTEGRATION.md  CI_CD_DIAGRAM.md  CI_CD_QUICK_START.md  CI_CD_SETUP.md  CI_CD_STATUS_REPORT 2.md  CI_CD_TESTING_EXPLAINED 4.md  CI_OPTIMIZATION.md  CLAUDE_CODE_INFRASTRUCTURE_GUIDE.md  CODEBASE_EXPLORATION_REPORT.md  COMPLETE_CI_CD_PIPELINE.md  COMPLETE_SETUP_GUIDE.md  COVERAGE_GAP_ANALYSIS 3.md  CURSOR_CLI_SETUP.md  DB_TESTING_GUIDE 3.md  DB_TEST_COMPLETION_SUMMARY 3.md  (+147 more)
e2e/: auth-account-type-mapping.spec.ts  auth-examples.spec.ts  auth-privy-real.spec.ts  auth-signin-action.spec.ts  auth-wallet-errors.spec.ts  auth.spec.ts  chat-advanced.spec.ts  chat-ai-sdk.spec.ts  chat-critical.spec.ts  chat-document-upload.spec.ts  chat-openrouter-auto-streaming.spec.ts  chat-provider-messages.spec.ts  chat-smoke-new.spec.ts  chat-streaming-live.spec.ts  chat-test-examples.spec.ts  chat.spec.ts  example.spec.ts  fixtures.ts  models-loading.spec.ts  openrouter-auto-streaming.spec.ts  referral-url-cleanup.spec.ts  surprise-me.spec.ts  test-helpers.ts
examples/: feature-flag-usage.tsx  google_oauth2_jwt_example.py  logging-usage-examples.ts  portkey-node-client.mjs
migrations/: 000_init_database.sql  001_create_payments_table.sql  add_max_concurrent_requests_column.sql  add_notification_tables.sql  add_privy_columns.sql  add_rate_limiting_tables.sql  add_sample_plans.sql  add_sample_plans_fixed.sql  add_trial_columns_to_api_keys_new.sql  add_trial_management.sql  add_welcome_email_sent_field.sql  create_chat_history_tables.sql  liteLLM-script.py  migrate.py  migration_manager.py  update_email_templates_professional_fixed.sql  update_email_templates_secure_final.sql  update_plans_4_tier_structure.sql  update_templates_for_resend.sql
opencode/: README.md  setup-linux.sh  setup-macos.sh  setup-windows.ps1
playwright/: mobile-browser-errors.spec.ts
playwright-report/: index.html
scripts/: Dockerfile.healthcheck  README-SENTRY.md  analyze-sentry-errors.js  build-desktop.js  build-health-monitor.ts  check-merge-conflicts.sh  check-subscription-config.js  check_auth_fix.py  check_google_credentials.py  check_latency_metrics.py  check_openrouter_models_schema.py  coverage_analysis.py  create_stripe_test_user.py  diagnose_tools_support.py  docker-compose.healthcheck.yml  fetch-sentry-errors.sh  fix_primary_api_keys.py  generate-models-data.js  generate-og-image.mjs  healthcheck-scheduler.service  healthcheck_all_models.py  healthcheck_config.json  healthcheck_function_calling.py  healthcheck_scheduler.py  init-railway-deployment.sh  inject-build-info.js  model-sync-status.js  railway_error_watch.py  repair_missing_api_keys.py  sentry-release.js  setup-auto-deploy.sh  setup_encryption_keys.py  setup_error_monitoring.py  start-production-server.sh  stop-production-server.sh  sync-claude-folder.sh  sync-models.js  sync-pr-comments.sh  test-all-gateways.sh  test-gateways.js  (+11 more)
src/: backfill_legacy_keys.py  cache.py  config.py  constants.py  db_config.py  db_security.py  enhanced_notification_service.py  instrumentation.ts  main.py  middleware.ts  models.py  redis_config.py  supabase_config.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
supabase/: config.toml
terragon-oss-pr-216-patches/: 0001-fix-sandbox-address-PR-review-comments-for-git-submo.patch  review-fixes.patch
test-fixtures/: auth.json  chat-messages.json  models.json
test-results/: .last-run.json
tests/: README.md  conftest.py  factories.py  streaming-validation.ts  test_app.py  test_cache.py  test_chutes_api.py  test_chutes_integration.py  test_chutes_list.py  test_chutes_sdk.py  test_chutes_sync.py  test_connections.py  test_e2e_coupon.py  test_endpoint_regression.py  test_endpoints.py  test_featherless_endpoint.py  test_huggingface_hub_integration.py  test_jwt_id_token_unit.py  test_latest_models.py  test_observability_middleware.py  test_portkey.py  test_portkey_models.py  test_portkey_pricing.py  (+8 more)
(+1314 files in other folders)
