[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatewayz-backend"
version = "2.0.3"
description = "Gatewayz Universal Inference API"
requires-python = ">=3.12"

# Ruff Configuration (Fast Python Linter)
[tool.ruff]
# Python version
target-version = "py312"

# Line length
line-length = 100

# Directories to include/exclude
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "node_modules",
    "build",
    "dist",
]

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (Black handles this)
    "B008",  # Do not perform function calls in argument defaults
    "W191",  # Indentation contains tabs
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.per-file-ignores]
# Ignore import errors in __init__.py files
"__init__.py" = ["F401", "F403"]
# Ignore unused imports in test files
"tests/**/*.py" = ["F401", "F811"]

# Black Configuration (Code Formatter)
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort Configuration (Import Sorter)
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*", "**/__pycache__/*"]

# MyPy Configuration (Type Checker)
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready for strict typing
ignore_missing_imports = true
files = "src/**/*.py"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers --tb=short --color=yes"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require database/API)",
    "slow: Slow running tests",
    "critical: Critical functionality tests that must always pass",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
