[package]
name = "gatewayz-desktop"
version = "1.0.0"
description = "GatewayZ Desktop - AI Chat Interface"
authors = ["Alpaca Network"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Alpaca-Network/gatewayz-monorepo"
default-run = "gatewayz-desktop"

[lib]
name = "gatewayz_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "gatewayz-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
url = "2"
open = "5"
sys-info = "0.9"
hostname = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
